--- a/templates/auth2.yaml
+++ b/templates/auth2.yaml
@@ -32,6 +32,8 @@ spec:
         - name: auth2
           image: {{ $.Values.auth2.image}}
           env:
+            - name: RELEASE_TIME
+              value: {{ now | date "2006-01-02T15:04:05" | quote }}
             {{- range $key,$value := $.Values.auth2.common_envs }}
             - name: {{ $key }}
               value: {{ $value | quote }}
@@ -72,7 +74,10 @@ spec:
             periodSeconds: {{ $.Values.auth2.livenessProbe.periodSeconds | default 300 }}
             successThreshold: {{ $.Values.auth2.livenessProbe.successThreshold | default 1 }}
             timeoutSeconds: {{ $.Values.auth2.livenessProbe.timeoutSeconds | default 3 }} 
-          resources: {}
+          {{- if $.Values.auth2.resources }}
+          resources:
+{{ $.Values.auth2.resources | toYaml | indent 12 }}
+          {{- end }}
           securityContext:
             allowPrivilegeEscalation: false
             privileged: false
