Set securityContext and add credential for Sentry

--- a/templates/auth2-process-trafficdata.yaml
+++ b/templates/auth2-process-trafficdata.yaml
@@ -43,7 +43,8 @@ spec:
             - name: {{ $.Release.Name }}-secret-imagepull
           restartPolicy: Never
           schedulerName: default-scheduler
-          securityContext: {}
+          securityContext: 
+{{ $.Values.auth2.securityContext | toYaml | indent 12 }}
           terminationGracePeriodSeconds: 30
   schedule: {{ $.Values.auth2.process_trafficdata.schedule }}
   successfulJobsHistoryLimit: {{ $.Values.auth2.process_trafficdata.successfulJobsHistoryLimit | default 3 }}
