--- a/templates/auth2.yaml
+++ b/templates/auth2.yaml
@@ -34,6 +34,10 @@ spec:
           env:
             - name: RELEASE_TIME
               value: {{ now | date "2006-01-02T15:04:05" | quote }}
+            {{- if $.Values.auth2.monitor }}
+            - name: AUTH2_MONITORING_DIR
+              value: "/app/monitoring"
+            {{- end }}
             {{- range $key,$value := $.Values.auth2.envs }}
             - name: {{ $key }}
               value: {{ $value | quote }}
@@ -51,6 +55,12 @@ spec:
             {{- end }}
           startupProbe:
             failureThreshold: {{ $.Values.auth2.startupProbe.failureThreshold | default 3 }}
+            {{- if and $.Values.auth2.monitor false }}
+            exec:
+              command:
+                - /app/bin/auth2_startup
+            timeoutSeconds: {{ add ($.Values.auth2.startupProbe.timeoutSeconds | default 3) 2 }}
+            {{- else }}
             httpGet:
               httpHeaders:
                 - name: Host
@@ -58,12 +68,19 @@ spec:
               path: /ping
               port: {{ $.Values.auth2.port | default 8080 }}
               scheme: HTTP
+            timeoutSeconds: {{ $.Values.auth2.startupProbe.timeoutSeconds | default 3 }}
+            {{- end }}
             initialDelaySeconds: {{ $.Values.auth2.startupProbe.initialDelaySeconds | default 5 }}
             periodSeconds: {{ $.Values.auth2.startupProbe.periodSeconds | default 10 }}
             successThreshold: {{ $.Values.auth2.startupProbe.successThreshold | default 1 }}
-            timeoutSeconds: {{ $.Values.auth2.startupProbe.timeoutSeconds | default 3 }}
           livenessProbe:
             failureThreshold: {{ $.Values.auth2.livenessProbe.failureThreshold | default 1 }}
+            {{- if and $.Values.auth2.monitor false }}
+            exec:
+              command:
+                - /app/bin/auth2_liveness
+            timeoutSeconds: {{ add ($.Values.auth2.livenessProbe.timeoutSeconds | default 3) 2 }} 
+            {{- else }}
             httpGet:
               httpHeaders:
                 - name: Host
@@ -71,10 +88,11 @@ spec:
               path: /ping
               port: {{ $.Values.auth2.port | default 8080 }}
               scheme: HTTP
+            timeoutSeconds: {{ $.Values.auth2.livenessProbe.timeoutSeconds | default 3 }} 
+            {{- end }}
             initialDelaySeconds: {{ $.Values.auth2.livenessProbe.initialDelaySeconds | default 10 }}
             periodSeconds: {{ $.Values.auth2.livenessProbe.periodSeconds | default 300 }}
             successThreshold: {{ $.Values.auth2.livenessProbe.successThreshold | default 1 }}
-            timeoutSeconds: {{ $.Values.auth2.livenessProbe.timeoutSeconds | default 3 }} 
           {{- if $.Values.auth2.resources }}
           resources:
 {{ $.Values.auth2.resources | toYaml | indent 12 }}
@@ -83,9 +101,34 @@ spec:
 {{ $.Values.auth2.securityContext | toYaml | indent 12 }}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
+          {{- if $.Values.auth2.monitor }}
+          volumeMounts:
+            - name: monitoring-scripts
+              mountPath: "/app/bin"
+            - name: monitoring-htmls
+              mountPath: "/app/html"
+            - name: monitoring-data
+              mountPath: "/app/monitoring"
+          {{- end }}
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: {{ $.Release.Name }}-secret-imagepull
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
+      {{- if $.Values.auth2.monitor }}
+      volumes:
+      - name: monitoring-scripts
+        configMap:
+          name: {{ $.Release.Name }}-auth2-configmap-monitoring-scripts
+          optional: false
+          defaultMode: 0555
+      - name: monitoring-htmls
+        configMap:
+          name: {{ $.Release.Name }}-auth2-configmap-monitoring-htmls
+          optional: false
+          defaultMode: 0444
+      - name: monitoring-data
+        persistentVolumeClaim:
+          claimName: {{ $.Release.Name }}-auth2-monitoring-data
+      {{- end }}
