--- a/templates/auth2.yaml
+++ b/templates/auth2.yaml
@@ -31,6 +31,7 @@ spec:
       containers:
         - name: auth2
           image: {{ $.Values.auth2.image}}
+          imagePullPolicy: Always
           env:
             - name: RELEASE_TIME
               value: {{ now | date "2006-01-02T15:04:05" | quote }}
