Change the azure adb2c's secret key; support toleration and node selector in values yaml file

--- a/templates/auth2.yaml
+++ b/templates/auth2.yaml
@@ -124,6 +124,14 @@ spec:
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
+      {{ if hasKey $.Values.auth2 "tolerations" }}
+      tolerations:
+{{ $.Values.auth2.tolerations | toYaml | indent 8 }}
+      {{- end }}
+      {{- if $.Values.auth2.nodeSelector }}
+      nodeSelector:
+{{ $.Values.auth2.nodeSelector | toYaml | indent 8 }}
+      {{- end }}
       securityContext:
         fsGroup: 1000
       volumes:
